[package]
name = "serf"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vigem-client="0.1.4"
anyhow="1"
log="0.4"
env_logger="0.9"
common={ path="../common" }

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_DataExchange",
]