[package]
name = "serf_ui"
version = "1.0.0"
edition = "2021"

[[bin]]
name="serf-ui"
path="./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
log="0.4"
env_logger="0.9"
eframe={version="0.19", features=[]}
egui_extras="0.19"
common={ path="../common" }

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
]